# proc-macro-workshop

builder/: Cargo.toml
builder/src/: lib.rs
builder/tests/: 07-repeated-field.rs  08-unrecognized-attribute.stderr
